# backend

./: .gitignore  .layer_hashes.json  README.md  build-and-deploy.py  deploy-all-regions.py  deploy_code.py  dzgro-sam-ap-south-1-dev.yaml  dzgro-sam-ap-south-1-prod.yaml  freezedependencies.py  git-push-all.py  mapping.py  mongo_schema.json  mongo_schema_generator.md  prompt.md  run-sam-app.py  schema.json  select_venv.py  template-ap-south-1.yaml  template-us-east-1.yaml  template-us-west-2.yaml  template.yaml  test.py
api/: pyproject.toml  requirements.txt  start_local.py
api/src/api/: Util.py  decorators.py  exception_handlers.py  main.py
api/src/api/Helpers/: Onboarding.py
api/src/api/middleware/: README.md  __init__.py  local_dev_auth.py
api/src/api/routers/: ad.py  adv_account.py  advertising_accounts.py  analytics.py  date_analytics.py  dzgro_reports.py  gstin.py  health.py  marketplaces.py  onboarding.py  orders.py  payments.py  performance_periods.py  performance_results.py  pg_orders.py  plans.py  pricing.py  product.py  products.py  razorpay_orders.py  reports.py  seller.py  spapi.py  spapi_accounts.py  state_analytics.py  user.py  users.py
db-inspector/: database_structure.json  generate_indexes_docs.py  generate_master_doc.py  generate_relationships_docs.py  generate_structure_docs.py  inspect_db.py  pyproject.toml
deploy/: README.md  pyproject.toml
deploy/src/deploy/: Dockerfile.layer  LambdaCustomLayerBuilder.py  TemplateBuilder.py  cleaner.py  connect-ec2.ps1  delete_layers.py  deploy.py  docker_manager.py  mapping.py
deploy/src/deploy/TemplateBuilder/: BuildApiGateway.py  BuildCertificates.py  BuildCognito.py  BuildCognitoCerts.py  BuildLambdasBucketsQueues.py  BuildLayers.py  Builder.py  SamExecutor.py  StarterMapping.py  docker_manager.py
dzgroshared/: pyproject.toml
dzgroshared/src/dzgroshared/: client.py
dzgroshared/src/dzgroshared/Methods/: AddPercentKeys.py  BreakDataToCurrPreByDates.py  CollateAnalyticKeyObject.py  GetCalculatedAnalyticsKeys.py  MatchDate.py
dzgroshared/src/dzgroshared/amazonapi/: __init__.py  auth.py  client.py  model.py
dzgroshared/src/dzgroshared/analytics/: AnalyticsPipelineBuilder.py  CurrencyUtils.py  README.md  controller.py  model.py
dzgroshared/src/dzgroshared/cognito/: client.py
dzgroshared/src/dzgroshared/db/: DataTransformer.py  DbUtils.py  Exceptions.py  PipelineProcessor.py  client.py  enums.py  model.py
dzgroshared/src/dzgroshared/fed_db/: client.py
dzgroshared/src/dzgroshared/functions/: __init__.py
dzgroshared/src/dzgroshared/models/: enums.py  model.py  s3.py  sqs.py
dzgroshared/src/dzgroshared/razorpay/: client.py  common.py  customer.py  error.py  invoice.py  order.py  plan.py  subscription.py
dzgroshared/src/dzgroshared/secrets/: client.py  model.py
dzgroshared/src/dzgroshared/sqs/: client.py  model.py  utils.py
dzgroshared/src/dzgroshared/storage/: client.py  model.py
dzgroshared/src/dzgroshared/utils/: copy_clipboard.py  date_util.py  mongo_pipeline_print.py
functions/amazon_daily_report/: .dep_hash  pyproject.toml
functions/amazon_daily_report/src/: requirements.txt
functions/amazon_daily_report/src/amazon_daily_report/: handler.py
functions/ams_performance/: .dep_hash  pyproject.toml
functions/ams_performance/src/ams_performance/: handler.py  performance.py
functions/dzgro_reports/: .dep_hash  pyproject.toml
functions/dzgro_reports/src/dzgro_reports/: handler.py  processor.py
functions/dzgro_reports_s3_trigger/: .dep_hash  pyproject.toml
functions/dzgro_reports_s3_trigger/src/: requirements.txt
functions/dzgro_reports_s3_trigger/src/dzgro_reports_s3_trigger/: cols.py  handler.py  models.py  processor.py
functions/new_user/: .dep_hash  pyproject.toml
functions/new_user/src/new_user/: handler.py
functions/payment_processor/: .dep_hash  pyproject.toml
functions/payment_processor/src/: requirements.txt
functions/payment_processor/src/payment_processor/: handler.py  invoice.py  processor.py
functions/post_sign_up/: .dep_hash  pyproject.toml
functions/post_sign_up/src/post_sign_up/: handler.py
functions/razorpay_webhook/: .dep_hash  pyproject.toml
functions/razorpay_webhook/src/razorpay_webhook/: handler.py  processor.py
sam-deploy/: README.md  delete_all_cognito_pools.py  delete_all_layers.py  pyproject.toml  upload_cognito_assets.py
sam-deploy/src/sam_deploy/: __main__.py
sam-deploy/src/sam_deploy/builder/: Dockerfile.invoicegeneratorlayer  Dockerfile.pandaslayer  build_assets.py  build_buckets.py  build_cognito.py  build_cognito_domain.py  build_http_apis.py  build_lambdas.py  build_layers.py  build_queues.py  template_builder.py
sam-deploy/src/sam_deploy/config/: mapping.py
sam-deploy/src/sam_deploy/executor/: sam_executor.py
sam-deploy/src/sam_deploy/utils/: docker_manager.py
secrets/: pyproject.toml
secrets/src/dzgro_secrets/: __init__.py  client.py
shared/amazonapi/: .dep_hash  pyproject.toml
shared/amazonapi/src/amazonapi/: __init__.py  auth.py  client.py
shared/cognito/: .dep_hash  pyproject.toml
shared/date_util/: .dep_hash  pyproject.toml
shared/db/: .dep_hash  pyproject.toml
shared/dzgrosecrets/: .dep_hash  pyproject.toml
shared/dzgrosecrets/tests/: test_import.py
shared/fed_db/: .dep_hash  pyproject.toml
shared/models/: .dep_hash  pyproject.toml
shared/razorpay/: .dep_hash  pyproject.toml
shared/sqs/: .dep_hash  pyproject.toml
shared/storage/: .dep_hash  pyproject.toml
test/: pyproject.toml
test/src/test/: handler.py
tests/: README.md  conftest.py  pyproject.toml  pytest.ini  shared_fixtures.py  test_bed.py
tests/integration/: conftest.py
tests/integration/test_accounts/: __init__.py  test_advertising_account.py  test_marketplace.py  test_selling_account.py
tests/integration/test_analytics/: README_performance_results.md  __init__.py  test_date_analytics.py  test_performance_results.py  test_state_analytics.py
tests/src/test_helpers/: __init__.py  assertions.py  fixtures.py
tests/unit/: conftest.py  test_handler.py
utilities/make_mask_square/: pyproject.toml
(+770 files in other folders)
