[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Kshitiz <dzgrotechnologies@gmail.com>"]
readme = "README.md"
packages = [{ include = "api", from = "src" }]

[tool.poetry.dependencies]
fastapi = { version = "0.111.0", extras = ["standard"] }
uvicorn = "0.29.0"
pyjwt = "2.8.0"
cryptography = "42.0.5"
python = ">=3.12,<4.0"
python-dotenv = "1.1.1"
cachetools = "6.2.0"
pytest = "8.4.2"
pytest-asyncio =  "1.1.0"
pyyaml = "6.0.2"


[tool.poetry.group.dev.dependencies]
dzgro-secrets = { path = "../secrets", develop = true }
dzgroshared = { path = "../dzgroshared", develop = true }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
 
