[project]
name = "db-inspector"
version = "0.1.0"
description = ""
authors = [
    {name = "Kshitiz",email = "dzgrotechnologies@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "motor (>=3.7.1,<4.0.0)",
    "pymongo (>=4.15.3,<5.0.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "dzgro-secrets @ file:///D:/github/sam-app/secrets"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
