[tool.poetry]
name = "deploy"
version = "0.1.0"
description = ""
authors = ["Kshitiz <dzgrotechnologies@gmail.com>"]
readme = "README.md"
packages = [{ include = "deploy", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"



[tool.poetry.group.dev.dependencies]
api = { path = "../api", develop = true }
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
 
