[tool.poetry]
name = "dzgroshared"
version = "0.1.0"
description = ""
authors = ["Kshitiz <dzgrotechnologies@gmail.com>"]
readme = "README.md"
packages = [{ include = "dzgroshared", from = "src" }]

[tool.poetry.dependencies]
httpx = "0.28.1"
backoff = "2.2.1"
pydantic = "2.11.7"
python = ">=3.12,<4.0"
boto3 = "1.34.113"
botocore = "1.34.113"
mypy_boto3_sqs = "1.40.0"
mypy_boto3_cognito_idp = "1.39.0"
motor = "3.7.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


