[project]
name = "sam-deploy"
version = "0.1.0"
description = "Optimized AWS SAM deployment project with Lambda aliases and HTTP API stage variables"
authors = [
    {name = "Kshitiz",email = "dzgrotechnologies@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "boto3>=1.35.0",  # Required for managed login branding APIs (describe_managed_login_branding_by_client, etc.)
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
    "inquirer>=3.1.0",
    "requests>=2.31.0",  # Required for fetching Cognito branding assets from CloudFront
    "dzgroshared @ file:///D:/github/sam-app/dzgroshared",
]

[tool.poetry]
packages = [{include = "sam_deploy", from = "src"}]


[tool.poetry.dependencies]
dzgroshared = {develop = true}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
