[project]
name = "dzgro-secrets"
version = "0.1.0"
description = "Secrets management for dzgro applications"
authors = [
    {name = "Kshitiz",email = "dzgrotechnologies@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.poetry]
packages = [{include = "dzgro_secrets", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
