[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Kshitiz <dzgrotechnologies@gmail.com>"]
readme = "README.md"
packages = [{include = "test", from = "src"}]

[tool.poetry.dependencies]
requests = "2.32.4"
python = ">=3.12,<4.0"

[tool.poetry.group.dev.dependencies]
dzgroshared = { path = "../dzgroshared", develop = true }
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



