[tool.poetry]
name = "ams-performance"
version = "0.1.0"
description = ""
authors = ["Kshitiz <dzgrotechnologies@gmail.com>"]
readme = "README.md"
packages = [{include = "ams_performance", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
requests = "2.32.4"
db = { path = "../../shared/db", develop = true }
dzgrosecrets = { path = "../../shared/dzgrosecrets", develop = true }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



