[tool.poetry]
name = "ams-performance"
version = "0.1.0"
description = ""
authors = ["Kshitiz <dzgrotechnologies@gmail.com>"]
readme = "README.md"
packages = [{include = "ams_performance", from = "src"}]

[tool.poetry.dependencies]
requests = "2.32.4"
python = ">=3.12,<4.0"

[tool.poetry.group.dev.dependencies]
db = { path = "../../shared/db", develop = true }
dzgrosecrets = { path = "../../shared/dzgrosecrets", develop = true }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



