[tool.poetry]
name = "dzgro-reports-s3-trigger"
version = "0.1.0"
description = ""
authors = ["Kshitiz <dzgrotechnologies@gmail.com>"]
readme = "README.md"
packages = [{include = "dzgro_reports_s3_trigger", from = "src"}]

[tool.poetry.dependencies]
bson = "0.5.10"
python = ">=3.12,<4.0"
[tool.poetry.group.dev.dependencies]
db = { path = "../../shared/db", develop = true }
storage = { path = "../../shared/storage", develop = true }
dzgrosecrets = { path = "../../shared/dzgrosecrets", develop = true }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



