[tool.poetry]
name = "post-sign-up"
version = "0.1.0"
description = ""
authors = ["Kshitiz <dzgrotechnologies@gmail.com>"]
readme = "README.md"
packages = [{ include = "post_sign_up", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12"
httpx = "*"
backoff = "*"
pydantic = "*"
asyncio = "*"
sqs = { path = "../../shared/sqs", develop = true }
dzgrosecrets = { path = "../../shared/dzgrosecrets", develop = true }
db = { path = "../../shared/db", develop = true }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



