[tool.poetry]
name = "cognito"
version = "0.1.0"
description = ""
authors = ["Kshitiz <dzgrotechnologies@gmail.com>"]
readme = "README.md"
packages = [{ include = "cognito", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12"
boto3 = "*"
mypy_boto3_cognito_idp = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

