[tool.poetry]
name = "cognito"
version = "0.1.0"
description = ""
authors = ["Kshitiz <dzgrotechnologies@gmail.com>"]
readme = "README.md"
packages = [{ include = "cognito", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
mypy_boto3_cognito_idp = "1.39.0"
boto3 = "1.34.113"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

