[tool.poetry]
name = "db"
version = "0.1.0"
description = ""
authors = ["Kshitiz <dzgrotechnologies@gmail.com>"]
readme = "README.md"
packages = [{ include = "db", from = "src" }]

[tool.poetry.dependencies]
boto3 = "1.34.113"
botocore = "1.34.113"
motor = "3.7.1"
mypy_boto3_cognito_idp = "1.39.0"
python = ">=3.12,<4.0"

[tool.poetry.group.dev.dependencies]
models = { path = "../models", develop = true }
sqs = { path = "../sqs", develop = true }
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
