[tool.poetry]
name = "dzgrosecrets"
version = "0.1.0"
description = ""
authors = ["Kshitiz <dzgrotechnologies@gmail.com>"]
readme = "README.md"
packages = [{ include = "dzgrosecrets", from = "src" }]

[tool.poetry.dependencies]
boto3 = "1.34.113"
pytest = "8.2.2"
pydantic = "2.11.7"
python = ">=3.12,<4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

