[tool.poetry]
name = "fed-db"
version = "0.1.0"
description = ""
authors = ["Kshitiz <dzgrotechnologies@gmail.com>"]
readme = "README.md"
packages = [{ include = "fed_db", from = "src" }]

[tool.poetry.dependencies]
motor = "3.7.1"
python = ">=3.12,<4.0"

[tool.poetry.group.dev.dependencies]
models = { path = "../models", develop = true }
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
