[tool.poetry]
name = "models"
version = "0.1.0"
description = ""
authors = ["Kshitiz <dzgrotechnologies@gmail.com>"]
readme = "README.md"
packages = [{ include = "models", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pydantic = "2.11.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

