[tool.poetry]
name = "models"
version = "0.1.0"
description = ""
authors = ["Kshitiz <dzgrotechnologies@gmail.com>"]
readme = "README.md"
packages = [{ include = "models", from = "src" }]

[tool.poetry.dependencies]
pydantic = "2.11.7"
pytz = "2024.1"
python = ">=3.12,<4.0"
[tool.poetry.group.dev.dependencies]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

