[tool.poetry]
name = "sqs"
version = "0.1.0"
description = ""
authors = ["Kshitiz <dzgrotechnologies@gmail.com>"]
readme = "README.md"
packages = [{ include = "sqs", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12"
pydantic = "*"
mypy_boto3_sqs = "*"
boto3 = "*"
botocore = "*"
db = { path = "../db", develop = true }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

