[tool.poetry]
name = "storage"
version = "0.1.0"
description = ""
authors = ["Kshitiz <dzgrotechnologies@gmail.com>"]
readme = "README.md"
packages = [{ include = "storage", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12"
pydantic = "*"
boto3 = "*"
botocore = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

