[tool.poetry]
name = "storage"
version = "0.1.0"
description = ""
authors = ["Kshitiz <dzgrotechnologies@gmail.com>"]
readme = "README.md"
packages = [{ include = "storage", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pydantic = "2.11.7"
boto3 = "1.34.113"
botocore = "1.34.113"
models = { path = "../models", develop = true }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

